--- a/.github/workflows/functional-tests.yml
+++ b/.github/workflows/functional-tests.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           json_secrets_str: ${{ toJSON(secrets) }}
           prefix: STAGING_ENV_
-          name: env-secrets
+          file_path: tests/env-secrets.yaml
       - uses: ./
         with:
           json_secrets_str: ${{ toJSON(secrets) }}
           prefix: STAGING_CERT_
-          name: certs
+          file_path: tests/certs.yaml
       - run: |
-          sops -d env-secrets.yaml
-          sops -d certs.yaml
+          sops -d tests/env-secrets.yaml
+          sops -d tests/certs.yaml
